--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,7 +59,8 @@
     
 
     <div class="article-content">
-      <h1 id="visiting-lectures">Visiting Lectures</h1>
+      <p><img src="/img/traffic.jpg" alt=""></p>
+<h1 id="visiting-lectures">Visiting Lectures</h1>
 <h2 id="2020">2020</h2>
 <p><a href="/ictc2020/">ICTC 3104.3 Data Analytics and Big Data</a></p>
 <h1 id="workshops">Workshops</h1>
