--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -41,7 +41,7 @@
 
   <ul class="nav-links">
     
-    <li><a href="/about/">Welcome!</a></li>
+    <li><a href="/about/">⚠️</a></li>
     
   </ul>
 </nav>
