--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
   <ul class="nav-links">
     
-    <li><a href="/about/">Welcome!</a></li>
+    <li><a href="/about/">⚠️</a></li>
     
   </ul>
 </nav>
