--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -63,19 +63,19 @@
 <li>Introduction to Data Analysis with R</li>
 </ol>
 <blockquote>
-<p>🧭 <a href="/slides/l1.html">Slides</a> 💻 Labwork  🔖 Chatsheet  📚 Reading</p>
+<p>🧭 <a href="/slides/l1.html">Slides</a> 💻 Labwork  🔖 Cheat sheet 📚 Reading</p>
 </blockquote>
 <ol start="2">
 <li>Data Wrangling with R</li>
 </ol>
 <blockquote>
-<p>🧭 Slides   💻 Labwork  🔖 Chatsheet  📚 Reading</p>
+<p>🧭 Slides   💻 Labwork  🔖 Cheat sheet  📚 Reading</p>
 </blockquote>
 <ol start="3">
 <li>Data Visualisation with R</li>
 </ol>
 <blockquote>
-<p>🧭 Slides  💻 Labwork  🔖 Chatsheet  📚 Reading</p>
+<p>🧭 Slides  💻 Labwork  🔖 Cheat sheet   📚 Reading</p>
 </blockquote>
 
     </div>
