--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -60,22 +60,22 @@
 
     <div class="article-content">
       <ol>
-<li>Introduction to Data Analysis with R</li>
+<li>Introduction and Basics of R Programming</li>
 </ol>
 <blockquote>
-<p>🧭 <a href="/slides/l1.html">Slides</a> 💻 Labwork  🔖 Cheat sheet 📚 Reading</p>
+<p>📚 <a href="/slides/ictc2020_l1.html">Slides</a> 💻 Lab-work  🔖 Cheat sheet</p>
 </blockquote>
 <ol start="2">
-<li>Data Wrangling with R</li>
+<li>Data Import and Data Wrangling with R</li>
 </ol>
 <blockquote>
-<p>🧭 Slides   💻 Labwork  🔖 Cheat sheet  📚 Reading</p>
+<p>📚 <a href="/slides/ictc2020_l2.html">Slides</a>   💻 Lab-work  🔖 Cheat sheet</p>
 </blockquote>
 <ol start="3">
 <li>Data Visualisation with R</li>
 </ol>
 <blockquote>
-<p>🧭 Slides  💻 Labwork  🔖 Cheat sheet   📚 Reading</p>
+<p>📚 Slides  💻 Lab-work  🔖 Cheat sheet</p>
 </blockquote>
 
     </div>
