--- a/public/slides/ictc2020_l1.html
+++ b/public/slides/ictc2020_l1.html
@@ -84,13 +84,13 @@ It is all about extracting information out of data in order to make better decis
 
 # What is R? 
 
-- R is a software environment for statistical computing and graphics
+- R is a software environment for statistical computing and graphics.
 
-- Language designers: **R**oss Ihaka and **R**obert Gentleman at the University of Auckland, New Zealand
+- Language designers: **R**oss Ihaka and **R**obert Gentleman at the University of Auckland, New Zealand.
 
 - Parent language: S
 
-- The latest R version 3.6.2 has been released on 2019-12-12
+- The latest R version 4.0.0 has been released on 2020-04-24.
 
 ![description of the image](RobertandRoss.jpg)
 
@@ -250,7 +250,7 @@ b
 
 - `ls()` can be used to display the names of the objects which are currently stored within R.
 
-- The collection of objects currently stored is called the **workspace**
+- The collection of objects currently stored is called the **workspace**.
 
 
 ```r
@@ -560,7 +560,7 @@ is.vector(first_vec)
 ```
 
 
-- charactor vector: `is.charactor()`
+- character vector: `is.character()`
 
 
 ```r
@@ -753,7 +753,7 @@ c(y1, y2)
 
 ### Simplifying vector creation
 
-- colon `:` produce regular spaced ascending or descending sequences.
+- colon `:` produces regular spaced ascending or descending sequences.
 
 
 ```r
@@ -962,7 +962,7 @@ y %in% x
 ## Vector arithmetic
 
 
-- operations are perfored element by element. 
+- operations are performed element by element. 
 
 
 ```r
@@ -1040,7 +1040,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eec964b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca3e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1164,7 +1164,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eec9277" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca590" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1229,7 +1229,7 @@ corona
 ```
 
 
-To check if it is a datafrme
+To check if it is a dataframe
 
 
 ```r
@@ -1358,7 +1358,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eec93d4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca312" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1439,9 +1439,9 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 6. Create a single vector (a new object) called ‘LifeExpectancy’ containing the values in `lifeExp` in gapminder.
 
-7. How many countires in Asia had `lifeExp` larger than 30 in 1952?
+7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eec94dd" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca3d2" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
