--- a/static/slides/ictc2020_l1.html
+++ b/static/slides/ictc2020_l1.html
@@ -560,7 +560,7 @@ is.vector(first_vec)
 ```
 
 
-- charactor vector: `is.charactor()`
+- character vector: `is.character()`
 
 
 ```r
@@ -753,7 +753,7 @@ c(y1, y2)
 
 ### Simplifying vector creation
 
-- colon `:` produce regular spaced ascending or descending sequences.
+- colon `:` produces regular spaced ascending or descending sequences.
 
 
 ```r
@@ -1040,7 +1040,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eec9f4d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca3e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1164,7 +1164,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eec9e2d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca590" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1358,7 +1358,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eec9f4a" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca312" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1441,7 +1441,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eec9d58" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca3d2" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
