--- a/static/slides/ictc2020_l1.html
+++ b/static/slides/ictc2020_l1.html
@@ -90,7 +90,7 @@ It is all about extracting information out of data in order to make better decis
 
 - Parent language: S
 
-- The latest R version 4.0.0 has been released on 2020-04-24.
+- The latest R version 4.0.1 has been released on 2020-06-06.
 
 ![description of the image](RobertandRoss.jpg)
 
@@ -649,7 +649,7 @@ typeof(anew)
 
 ### Explicit coercion
 
-Vectors can be explicitly coerced from one class to another using the `as.*` functions, if available. For example, `as.charactor`, `as.numeric`, `as.integer`, and `as.logical`.
+Vectors can be explicitly coerced from one class to another using the `as.*` functions, if available. For example, `as.character`, `as.numeric`, `as.integer`, and `as.logical`.
 
 
 ```r
@@ -1040,7 +1040,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eeca3e0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca3fe" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1164,7 +1164,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eeca590" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca570" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1358,7 +1358,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eeca312" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca7a6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1441,7 +1441,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eeca3d2" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca541" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
