--- a/static/slides/ictc2020_l2.html
+++ b/static/slides/ictc2020_l2.html
@@ -25,9 +25,9 @@ class: center, middle, inverse, title-slide
 
 # Outline
 
-1. Basics of R Programming
+1. Basics of R Programming ✅
 
-2. Data Import
+2. Data Import ⚙️
 
 3. Data Wrangling
 
@@ -276,11 +276,11 @@ mydata &lt;- read_xlsx("file_path")
 ---
 # Outline
 
-1. Basics of R Programming
+1. Basics of R Programming ✅
 
-2. Data Import
+2. Data Import ✅
 
-3. Data Wrangling
+3. Data Wrangling ⚙️
 
 4. Data Visualization
 
