--- a/static/slides/ictc2020_l1.html
+++ b/static/slides/ictc2020_l1.html
@@ -72,7 +72,7 @@ It is all about extracting information out of data in order to make better decis
 
 # Outline
 
-1. Basics of R Programming 
+1. Basics of R Programming ⚙️
 
 2. Data Import
 
@@ -1040,7 +1040,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eeca3fe" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca7b6" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1164,7 +1164,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eeca570" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca846" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1358,7 +1358,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eeca7a6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca7e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1441,7 +1441,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eeca541" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeca938" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
