--- a/public/slides/ictc2020_l1.html
+++ b/public/slides/ictc2020_l1.html
@@ -72,7 +72,7 @@ It is all about extracting information out of data in order to make better decis
 
 # Outline
 
-1. Basics of R Programming 
+1. Basics of R Programming ⚙️
 
 2. Data Import
 
@@ -90,7 +90,7 @@ It is all about extracting information out of data in order to make better decis
 
 - Parent language: S
 
-- The latest R version 4.0.0 has been released on 2020-04-24.
+- The latest R version 4.0.1 has been released on 2020-06-06.
 
 ![description of the image](RobertandRoss.jpg)
 
@@ -100,11 +100,11 @@ It is all about extracting information out of data in order to make better decis
 
 - **Free**
 
-- **Powerful:** Over 14600 contributed packages on the main repository (CRAN), as of July 2019, provided by top international researchers and programmers
+- **Powerful:** Over 14600 contributed packages on the main repository (CRAN), as of July 2019, provided by top international researchers and programmers.
 
-- **Flexible:** It is a language, and thus allows you to create your own solutions
+- **Flexible:** It is a language, and thus allows you to create your own solutions.
 
-- **Community:** Large global community friendly and helpful, lots of resources
+- **Community:** Large global community friendly and helpful, lots of resources.
 
 ---
 
@@ -129,6 +129,17 @@ background-size: contain
 ## The RStudio IDE
 
 .footer-note[.tiny[.green[Image Credit: ][Clastic Detritus ](https://clasticdetritus.com/2013/01/10/creating-data-plots-with-r/)]]
+
+---
+
+background-image: url('rstudioanalogy.jpeg')
+background-position: center
+background-size: contain
+
+## The RStudio IDE
+
+.footer-note[.tiny[.green[Image Credit: ]R-Ladies Newcastle
+]]]
 ---
 
 background-image: url('airport.jpg')
@@ -262,7 +273,7 @@ ls()
 ```
 
 --
-- To remove objects the function `rm` is available
+- To remove objects the function `rm` is available.
 
     - remove all objects `rm(list=ls())`
     
@@ -1005,11 +1016,6 @@ shortvec + longvec
 first &lt;- c(1, 2, 3, 4); second &lt;- c(10, 100)
 first * second
 ```
----
-
-# Other vector operations
-
-- Please see the [cheatsheet](/pdf/baser.pdf) and course materials STA Data Analysis II
 
 ---
 
@@ -1040,7 +1046,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eeca381" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccb11" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1164,7 +1170,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eeca6a9" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccaaf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1358,7 +1364,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eeca623" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccc6e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1441,7 +1447,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eeca3bf" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccb43" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
