--- a/public/slides/ictc2020_l2.html
+++ b/public/slides/ictc2020_l2.html
@@ -1863,7 +1863,7 @@ class: center, middle
 
 All rights reserved by 
 
-[Dr Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
+[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
 
 and 
 
