--- a/static/slides/ictc2020_l1.html
+++ b/static/slides/ictc2020_l1.html
@@ -1046,7 +1046,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5eeccb11" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccbb5" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1170,7 +1170,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5eeccaaf" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccb58" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1364,7 +1364,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5eeccc6e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccc69" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1447,7 +1447,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5eeccb43" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eeccc59" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1461,7 +1461,7 @@ class: center, middle
 
 All rights reserved by 
 
-[Dr Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
+[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
 
 and 
 
