--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -59,7 +59,8 @@
     
 
     <div class="article-content">
-      <ol>
+      <p>👉 <a href="/slides/installation.md">Help guide Install R and R studio</a></p>
+<ol>
 <li>Introduction and Basics of R Programming</li>
 </ol>
 <blockquote>
