--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -59,7 +59,7 @@
     
 
     <div class="article-content">
-      <p>👉 <a href="/slides/installation.md">Help guide Install R and R studio</a></p>
+      <p>👉 <a href="/slides/installation.md">Help - Install R and R studio</a></p>
 <ol>
 <li>Introduction and Basics of R Programming</li>
 </ol>
