--- a/public/installation/index.html
+++ b/public/installation/index.html
@@ -59,12 +59,20 @@
     
 
     <div class="article-content">
-      <p><img src="/img/trafficmedium.jpg" alt=""></p>
-<h1 id="visiting-lectures">Visiting Lectures</h1>
-<h2 id="2020">2020</h2>
-<p><a href="/Installation/">Help - Install R and R Studio</a></p>
-<p><a href="/ictc2020/">ICTC 3104.3 Data Analytics and Big Data</a></p>
-<h1 id="workshops">Workshops</h1>
+      <h1 id="download-and-install-r-and-r-studio">Download and Install R and R Studio</h1>
+<h2 id="r-and-rstudio">R and RStudio</h2>
+<ul>
+<li>
+<p><a href="https://cran.r-project.org/">Download R</a></p>
+</li>
+<li>
+<p><a href="https://rstudio.com/products/rstudio/download/">Download RStudio</a></p>
+</li>
+</ul>
+<p>The first thing you need to do to get started with R is to install it on your computer. R works on pretty much every platform available, including the widely available Windows, Mac OS X, and Linux systems. If you want to watch a step-by-step tutorial on how to install R for Mac or Windows, you can watch these videos:</p>
+<p><a href="https://www.youtube.com/watch?v=Ohnk9hcxf9M&amp;feature=youtu.be">Installation R on Windows</a></p>
+<p><a href="https://www.youtube.com/watch?v=uxuuWXU-7UQ&amp;feature=youtu.be">Installing R on the Mac</a></p>
+<p>Next you can install Rstudio. Remember, you must have R already installed before installing Rstudio. If you want to watch a step-by-step watch the vedio <a href="https://www.youtube.com/watch?v=bM7Sfz-LADM&amp;feature=youtu.be">here</a></p>
 
     </div>
   </article>
