--- a/public/slides/ictc2020_l1.html
+++ b/public/slides/ictc2020_l1.html
@@ -1046,7 +1046,7 @@ class: duke-orange, center, middle
 R code?
 
 
-<div class="countdown" id="timer_5f335a0a" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f471f76" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1170,7 +1170,7 @@ class: duke-orange
 
 5. Extract elements greater than 2.
 
-<div class="countdown" id="timer_5f33585d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f471fef" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1364,7 +1364,7 @@ class: duke-orange, center, middle
 
 ![](enterdata.png)
 
-<div class="countdown" id="timer_5f33584e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f472051" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1447,7 +1447,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
-<div class="countdown" id="timer_5f335819" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f471e5e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1461,11 +1461,7 @@ class: center, middle
 
 All rights reserved by 
 
-[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
-
-and 
-
-[Dr. Chitraka Wickramarachchi](http://science.sjp.ac.lk/sta/staff/mr-chitraka-wickramarachchi/)
+[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="libs/remark-latest.min.js"></script>
