--- a/static/regression/regression1.html
+++ b/static/regression/regression1.html
@@ -469,8 +469,179 @@ ggplot(df, aes(x=x, y=y)) + geom_point()+xlab("x") + ylab("y") +
 ![](regression1_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
 ---
 
+```r
+anscombe
+```
+
+```
+   x1 x2 x3 x4    y1   y2    y3    y4
+1  10 10 10  8  8.04 9.14  7.46  6.58
+2   8  8  8  8  6.95 8.14  6.77  5.76
+3  13 13 13  8  7.58 8.74 12.74  7.71
+4   9  9  9  8  8.81 8.77  7.11  8.84
+5  11 11 11  8  8.33 9.26  7.81  8.47
+6  14 14 14  8  9.96 8.10  8.84  7.04
+7   6  6  6  8  7.24 6.13  6.08  5.25
+8   4  4  4 19  4.26 3.10  5.39 12.50
+9  12 12 12  8 10.84 9.13  8.15  5.56
+10  7  7  7  8  4.82 7.26  6.42  7.91
+11  5  5  5  8  5.68 4.74  5.73  6.89
+```
+
+---
 
 
+```r
+x &lt;- c(anscombe$x1, anscombe$x2, anscombe$x3, anscombe$x4)
+y &lt;- c(anscombe$y1, anscombe$y2, anscombe$y2, anscombe$y4)
+z &lt;- as.factor(rep(1:4, each=11))
+df &lt;- data.frame(x=x, y=y, z=z)
+ggplot(df,aes(x=x,y=y,group=z))+geom_point(aes(col=z))+facet_wrap(~z)
+```
+
+![](regression1_files/figure-html/unnamed-chunk-24-1.png)&lt;!-- --&gt;
+---
+
+
+
+.pull-left[
+
+```r
+cor(anscombe$x1, anscombe$y1)
+```
+
+```
+[1] 0.8164205
+```
+
+```r
+mean(anscombe$x1)
+```
+
+```
+[1] 9
+```
+
+```r
+mean(anscombe$y1)
+```
+
+```
+[1] 7.500909
+```
+
+
+```r
+cor(anscombe$x2, anscombe$y2)
+```
+
+```
+[1] 0.8162365
+```
+
+```r
+mean(anscombe$x2)
+```
+
+```
+[1] 9
+```
+
+```r
+mean(anscombe$y2)
+```
+
+```
+[1] 7.500909
+```
+
+]
+
+
+.pull-right[
+
+
+```r
+cor(anscombe$x3, anscombe$y3)
+```
+
+```
+[1] 0.8162867
+```
+
+```r
+mean(anscombe$x3)
+```
+
+```
+[1] 9
+```
+
+```r
+mean(anscombe$y3)
+```
+
+```
+[1] 7.5
+```
+
+
+```r
+cor(anscombe$x4, anscombe$y4)
+```
+
+```
+[1] 0.8165214
+```
+
+```r
+mean(anscombe$x4)
+```
+
+```
+[1] 9
+```
+
+```r
+mean(anscombe$y4)
+```
+
+```
+[1] 7.500909
+```
+
+
+]
+
+
+---
+ Anscombe's quartet
+
+
+```r
+x &lt;- c(anscombe$x1, anscombe$x2, anscombe$x3, anscombe$x4)
+y &lt;- c(anscombe$y1, anscombe$y2, anscombe$y2, anscombe$y4)
+z &lt;- as.factor(rep(1:4, each=11))
+df &lt;- data.frame(x=x, y=y, z=z)
+ggplot(df,aes(x=x,y=y,group=z))+geom_point(aes(col=z))+facet_wrap(~z)
+```
+
+![](regression1_files/figure-html/unnamed-chunk-29-1.png)&lt;!-- --&gt;
+
+All four sets are identical when examined using simple summary statistics but vary considerably when grouped.
+
+
+---
+
+background-image: url('samestat_differentdata.png')
+background-position: center
+background-size: contain
+
+
+---
+![description of the image](SmallChange.gif)
+
+Acknowledgement: Justin Matejke and George Fitzmaurice, Autodesk Research, Canada
 ---
 
 class: center, middle
