--- a/static/regression/regression1.html
+++ b/static/regression/regression1.html
@@ -3,7 +3,7 @@
   <head>
     <title>STA 506 2.0 Linear Regression Analysis</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Thiyanga S. Talagala" />
+    <meta name="author" content="Dr Thiyanga S. Talagala" />
     <meta name="date" content="2020-08-29" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 
 # STA 506 2.0 Linear Regression Analysis
 ## Lecture 1: Introduction to regression analysis
-### Thiyanga S. Talagala
+### Dr Thiyanga S. Talagala
 ### 2020-08-29
 
 ---
@@ -643,7 +643,40 @@ background-size: contain
 
 Acknowledgement: Justin Matejke and George Fitzmaurice, Autodesk Research, Canada
 ---
+## Regression Analysis
 
+### Functional relationship between two variables
+
+![](regression1_files/figure-html/unnamed-chunk-30-1.png)&lt;!-- --&gt;
+
+---
+
+### Functional relationship between two variables
+
+![](regression1_files/figure-html/unnamed-chunk-31-1.png)&lt;!-- --&gt;
+
+---
+### Functional relationship between two variables
+
+![](regression1_files/figure-html/unnamed-chunk-32-1.png)&lt;!-- --&gt;
+
+---
+
+### Functional relationship between two variables
+
+![](regression1_files/figure-html/unnamed-chunk-33-1.png)&lt;!-- --&gt;
+---
+## Homework
+
+Install R and R studio
+
+[Help is here](https://edify-thiyanga.netlify.app/installation/)
+
+---
+## Next Lecture
+
+&gt; Simple Linear Regression
+---
 class: center, middle
 
 All rights reserved by 
