--- a/static/regression/regression1.html
+++ b/static/regression/regression1.html
@@ -242,7 +242,7 @@ background-size: contain
 
 
 ---
-## Pearson Correlation Coefficient
+## Pearson's Correlation Coefficient
 
 ![](karlpearson.jpg)
 
