--- a/public/regression/regression1.html
+++ b/public/regression/regression1.html
@@ -255,7 +255,7 @@ background-size: contain
 #### Pearson's Correlation Coefficient
 
 
-$$ cor(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{n *\sigma_x \sigma_y} $$
+$$ cor(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N *\sigma_x \sigma_y} $$
 
 
 &lt;!--https://github.com/EvaMaeRey/statistics/blob/master/difference_in_difference.Rmd--&gt;
@@ -273,7 +273,7 @@ $$ cor(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{n *\sigma_x \sigma_y} $
 #### Covariance: Mean `\(x\)`
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
 ---
@@ -281,7 +281,7 @@ $$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 #### Covariance: Mean `\(y\)`
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
 ---
@@ -289,7 +289,7 @@ $$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 #### Covariance: differences `\(x\)`
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
 ---
@@ -297,7 +297,7 @@ $$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 #### Covariance: Differences `\(y\)`
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
 ---
@@ -305,7 +305,7 @@ $$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 #### Covariance: Multiply differences
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
 ---
@@ -313,7 +313,7 @@ $$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 #### Covariance: take average rectangle
 
 
-$$ cov(x,y) = \frac{\sum_{i=1}^n (x_i-\mu_x)(y_i-\mu_y)}{N} $$
+$$ cov(x,y) = \frac{\sum_{i=1}^N (x_i-\mu_x)(y_i-\mu_y)}{N} $$
 
 ![](regression1_files/figure-html/unnamed-chunk-14-1.png)&lt;!-- --&gt;
 ---
