--- a/public/ictc2020/index.html
+++ b/public/ictc2020/index.html
@@ -78,6 +78,11 @@
 <blockquote>
 <p>📚 <a href="/slides/ictc2020_l3.html">Slides</a>  💻 Lab-work - slides 🔖  <a href="https://dcgerard.github.io/stat_412_612/lectures/03_graphics/03_qplot_cheatsheet.pdf">Cheat sheet - 1</a> <a href="/Cheatsheets/ggplot2-cheatsheet.pdf">Cheat sheet - 2</a></p>
 </blockquote>
+<h2 id="individual-assignment">Individual assignment</h2>
+<p><a href="https://edify-thiyanga.netlify.app/slides/ictc2020_l3.html#29">Details here</a></p>
+<p>Due date: 17 September 2020</p>
+<p>Submit .Rmd file and HTML file</p>
+<p>Data set: <a href="/static/data/facebookdata_marketing.rds">Data-facebookdata_marketing.rds</a></p>
 
     </div>
   </article>
