update with the tutorial

--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -61,7 +61,8 @@
     <div class="article-content">
       <ol>
 <li>📚 <a href="/regression/regression1.html">Slide 1: Introduction to regression analysis</a></li>
-<li>📚 <a href="/regression/regression2.html">Slide 2: Introduction to regression analysis</a></li>
+<li>📚 <a href="/regression/regression2.html">Slide 2: Simple Linear Regression</a></li>
+<li><a href="/regression/tutorial_1.pdf">Tutorial 1</a></li>
 </ol>
 
     </div>
