--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -63,6 +63,7 @@
 <li>📚 <a href="/regression/regression1.html">Slide 1: Introduction to regression analysis</a></li>
 <li>📚 <a href="/regression/regression2.html">Slide 2: Simple Linear Regression</a></li>
 <li><a href="/regression/tutorial_1.pdf">Tutorial 1</a></li>
+<li>📚 <a href="/regression/regression3.html">Slide 3: Simple Linear Regression</a></li>
 </ol>
 
     </div>
