--- a/static/regression/regression2.html
+++ b/static/regression/regression2.html
@@ -303,6 +303,19 @@ The error terms are normally distributed with mean `\(0\)` and variance `\(\sigm
 `$$E(Y|X=x_i) = E(\beta_0 + \beta_1x_i + \epsilon)=\beta_0+\beta_1x_i$$`
 
 ---
+![](recap.png)
+---
+![](regdis.jpg)
+
+source: http://digfir-published.macmillanusa.com/psbe4e/psbe4e_ch10_2.html
+
+---
+
+![](S3pn3.jpg)
+
+source: https://tex.stackexchange.com/questions/347744/assumptions-for-simple-linear-regression
+
+---
 ## In-class: Population Regression Line
 
 `$$E(Y|X=x_i) = E(\beta_0 + \beta_1x_i + \epsilon)=\beta_0+\beta_1x_i$$`
@@ -310,7 +323,6 @@ The error terms are normally distributed with mean `\(0\)` and variance `\(\sigm
 For a single unit `\((y_i, x_i)\)`
 
 `$$y_i = \beta_0 + \beta_1x_i+\epsilon_i \text{  where  } \epsilon_i \sim N(0, \sigma^2)$$`
-
 
 ---
 ## Take a sample: 
